--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -25,6 +25,7 @@ option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
 # Additional tools
 option.extratools = Additional Tools
 option.printsize = Print size
+option.listing = Create listing file
 
 # Compiler -> Debugging
 option.debugging = Debugging
