elf: Simplify flash tool in leaf toolchains
Similar to changes for Create listing tool.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -26,6 +26,7 @@ option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
 option.extratools = Additional Tools
 option.printsize = Print size
 option.listing = Create listing file
+option.flash = Create flash image file
 
 # Compiler -> Debugging
 option.debugging = Debugging
