elf: Use conventional IDs for toolchain elements

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -30,3 +30,13 @@ option.flash = Create flash image file
 
 # Compiler -> Debugging
 option.debugging = Debugging
+
+# Toolchains
+toolchain.em = GNU Toolchain for ARC EM
+toolchain.emeb = GNU Toolchain for ARC EM (big-endian)
+toolchain.hs = GNU Toolchain for ARC HS
+toolchain.hseb = GNU Toolchain for ARC HS (big-endian)
+toolchain.arc700 = GNU Toolchain for ARC700
+toolchain.arc700eb = GNU Toolchain for ARC700 (big-endian)
+toolchain.arc600 = GNU Toolchain for ARC600
+toolchain.arc600eb = GNU Toolchain for ARC600 (big-endian)
